# funnyorm

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
funnyorm/: __init__.py
funnyorm/common/: __init__.py  driver.py
funnyorm/database/: __init__.py  database.py
funnyorm/drivers/: exceptions.py  firebird_driver.py  postgres_driver.py
funnyorm/models/: __init__.py  base_model.py  exceptions.py  fields.py  supported_databases.py
